--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title></title>
+		<title>Clock</title>
+		<link rel="stylesheet" type="text/css" href="css/animate.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body id="body">
-
+		<section class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="col-xs-4">
+						<div class="hours clock" id="hours"></div>
+					</div> <!-- col 4 -->
+					<div class="col-xs-4">
+						<div class="minutes clock" id="minutes"></div>
+					</div> <!-- col 4 -->
+					<div class="col-xs-4">
+						<div class="seconds clock" id="secondes"></div>
+					</div> <!-- col 4 -->
+				</div> <!-- col 12 -->
+			</div> <!-- row -->
+		</section><!-- container -->
 
 
 
