changed the constr. one div instead of three

--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
 		<section class="container">
 			<div class="row">
 				<div class="col-xs-12">
-					<div class="col-xs-4">
-						<div class="hours clock" id="hours"></div>
-					</div> <!-- col 4 -->
-					<div class="col-xs-4">
-						<div class="minutes clock" id="minutes"></div>
-					</div> <!-- col 4 -->
-					<div class="col-xs-4">
-						<div class="seconds clock" id="secondes"></div>
-					</div> <!-- col 4 -->
+					<div class="myClock" id="myClock"></div>
 				</div> <!-- col 12 -->
 			</div> <!-- row -->
 		</section><!-- container -->
