coded the footer section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 			</div> <!-- row -->
 		</section><!-- container -->
 
+		<footer class="container-fluid">
+			<p>Developed By <a href="http://www.ahmedsoliman.net">A.SOLIMAN</a></p>
+		</footer>
+
 
 
 
